<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_purple"
    tools:context="com.example.firat.bodyshape.MainActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:background="@android:color/holo_blue_dark"
        tools:layout_editor_absoluteX="139dp"
        tools:layout_editor_absoluteY="45dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="253dp"
        android:layout_height="355dp"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:srcCompat="@android:drawable/alert_dark_frame"
        tools:layout_editor_absoluteX="76dp" />

    <com.example.firat.bodyshape.PinchZoomImageView
        android:id="@+id/pinchZoomImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="@string/gallery"
        android:background="@android:color/holo_red_light"
        tools:layout_editor_absoluteX="139dp"
        tools:layout_editor_absoluteY="356dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="166dp"
        android:layout_height="65dp"
        android:layout_alignEnd="@+id/imageView"
        android:layout_alignTop="@+id/editText"
        android:layout_marginEnd="-60dp"
        android:text="@string/process_and_calculate"
        android:background="@android:color/holo_green_light"/>

    <EditText
        android:id="@+id/editText"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="31dp"
        android:ems="10"
        android:focusableInTouchMode="true"
        android:hint="@string/hint1"
        android:inputType="number"
        android:textColorHint="@android:color/holo_green_light"
        android:textSize="15sp"
        android:imeOptions="actionNext" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/button3"
        android:layout_marginStart="78dp"
        android:ems="10"
        android:focusableInTouchMode="true"
        android:hint="@string/hint2"
        android:inputType="number"
        android:textColorHint="@android:color/holo_green_light"
        android:textSize="15sp"
        android:cursorVisible="false"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="221dp"
        android:layout_height="132dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="79dp"
        android:layout_marginEnd="49dp"
        android:text="TextView"
        android:textSize="35sp"
        android:visibility="invisible" />


</RelativeLayout>

<android.support.design.widget.NavigationView
android:layout_width="wrap_content"
android:layout_height="match_parent"
app:menu="@menu/navigation_menu"
android:layout_gravity="start">

</android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>